# project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
benchmarks/: CMakeLists.txt
cmake/: setup_boost.cmake
template/: CMakeLists.txt  main.cpp
template/adder/: CMakeLists.txt  adder.cpp  adder.hpp
tests/: CMakeLists.txt
